@@ -74,24 +74,11 @@ class EditPartitionDialog(Gtk.Dialog):
         area = self.get_content_area()
         area.add(self.ui.get_object('edit_partition_vbox'))
 
-        self.add_button(Gtk.STOCK_APPLY, Gtk.ResponseType.APPLY)
-        self.add_button(Gtk.STOCK_CANCEL, Gtk.ResponseType.CANCEL)
-
-        self.add_luks_button()
-
-
-    def add_luks_button(self):
-        pass
-        """
-        <object class="GtkButton" id="luks_settings">
-                        <property name="label" translatable="yes">Encryption options...</property>
-                        <property name="use_action_appearance">False</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <signal name="clicked" handler="luks_settings_clicked" swapped="no"/>
-                    </object>
-        """
+        self.buttons = {}
+        self.buttons['apply'] = self.add_button(
+            Gtk.STOCK_APPLY, Gtk.ResponseType.APPLY)
+        self.buttons['cancel'] = self.add_button(
+            Gtk.STOCK_CANCEL, Gtk.ResponseType.CANCEL)
 
     def get_label(self):
         """ Returns partition label """
@@ -171,19 +158,18 @@ class EditPartitionDialog(Gtk.Dialog):
                 self.ui_dir, self.transient_for)
 
         # Assign labels and images to buttons
-        """
+
         btns = [
             ('cancel', 'dialog-cancel', _('_Cancel')),
-            ('ok', 'dialog-apply', _('_Apply'))]
+            ('apply', 'dialog-apply', _('_Apply'))]
 
         for grp in btns:
             (btn_id, icon, lbl) = grp
             image = Gtk.Image.new_from_icon_name(icon, Gtk.IconSize.BUTTON)
-            btn = self.ui.get_object(btn_id)
+            btn = self.buttons[btn_id]
             btn.set_always_show_image(True)
             btn.set_image(image)
             btn.set_label(lbl)
-        """
 
         self.translate_ui()
 
@@ -228,6 +214,8 @@ class EditPartitionDialog(Gtk.Dialog):
 
         self.luks_dialog.prepare(self.luks_options)
 
+        self.luks_dialog.show_all()
+
         response = self.luks_dialog.run()
         if response == Gtk.ResponseType.OK:
             self.luks_options = self.luks_dialog.get_options()
@@ -236,7 +224,7 @@ class EditPartitionDialog(Gtk.Dialog):
 
     def set_partition_info(self, partition_info):
         """ Sets partition info to widgets """
-        self.set_filesystem(partition_info['filesystems'])
+        self.set_filesystem(partition_info['filesystem'])
         self.set_mount_point(partition_info['mount_point'])
         self.set_label(partition_info['label'])
         self.set_format(
@@ -276,14 +264,15 @@ class EditPartitionDialog(Gtk.Dialog):
     def translate_ui(self):
         """ Translates dialog interface """
 
-        btns = [
+        self.set_title(_("Edit partition"))
+
+        labels = [
             ('use_label', _("Use As:")),
             ('mount_label', _("Mount Point:")),
             ('label_label', _("Label (optional):")),
-            ('format_label', _("Format:")),
-            ('luks_settings', _("Encryption Options..."))]
+            ('format_label', _("Format:"))]
 
-        for grp in btns:
-            btn_id, lbl = grp
-            btn = self.ui.get_object(btn_id)
-            btn.set_label(lbl)
+        for grp in labels:
+            label_id, text = grp
+            label = self.ui.get_object(label_id)
+            label.set_label(text)
