@@ -146,5 +146,20 @@
                 <property name="position">0</property>
             </packing>
         </child>
+        <child>
+            <object class="GtkButton" id="luks_settings">
+                <property name="label" translatable="yes">Encryption options...</property>
+                <property name="use_action_appearance">False</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <signal name="clicked" handler="luks_settings_clicked" swapped="no"/>
+            </object>
+            <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">1</property>
+            </packing>
+        </child>
     </object>
 </interface>
